--- a/src/app/components/partners/partner-profile/partner-profile.component.scss
+++ b/src/app/components/partners/partner-profile/partner-profile.component.scss
@@ -1,5 +1,7 @@
 @import 'content/content-wrapper.component';
 @import 'order-wrapper.component.scss';
+@import 'ask-repair-wrapper.component.scss';
+@import 'add-new-portfo.component.scss';
 
 .profile-content {
     position: relative;
@@ -80,196 +82,6 @@
             }
         }
     }
-
-    .toggle-order-wrapper {
-        position: fixed;
-        bottom: 5rem;
-        right: 1rem;
-        width: 40px;
-        height: 40px;
-        background-color: var(--color-primary);
-        z-index: 999;
-        display: none;
-        font-size: 30px;
-        border-radius: 50%;
-        padding-top: 3.5px;
-        padding-left: 5px;
-        color: var(--color-light);
-    }
-
-    .ask-repair-wrapper {
-        display: none;
-        position: fixed;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        background-color: rgba(0, 0, 0, 0.7);
-        z-index: 999;
-
-        .ask-repair-container {
-            width: 100%;
-            height: 100vh;
-            padding-top: 100px;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            position: relative;
-
-            .ask-repair-content {
-                height: 80%;
-                width: 90%;
-                // min-height: 400px;
-                // overflow-y: auto;
-                margin: auto;
-                background-color: var(--color-light);
-                position: absolute;
-                transform: translateY(-200%);
-                padding: 0 1rem;
-
-                .repair-title {
-                    height: 100px;
-
-                }
-
-                .deliver-line {
-                    height: 2px;
-                    width: 100%;
-                    margin: 1.5rem 0;
-                    background-color: var(--color-primary);
-                }
-
-                .repair-cont {
-                    // height: 100%;
-                    max-height: calc(100% - 150px);
-                    overflow-y: auto;
-                    padding-top: 1rem;
-
-                    .repair-picture {
-                        height: 100%;
-                        padding-right: 1rem;
-
-                        .picture-wrapper {
-                            height: 100%;
-                            display: grid;
-                            grid-template-columns: repeat(4, 1fr);
-                            gap: 1rem;
-
-                            .picture-item {
-                                grid-column: span 1;
-                                width: 100%;
-                                position: relative;
-
-                                img {
-                                    width: 100%;
-                                    height: 100%;
-                                    object-fit: cover;
-                                }
-
-                                .btn-del-image {
-                                    position: absolute;
-                                    top: -.4rem;
-                                    right: -.3rem;
-                                    font-size: 22px;
-                                    width: 22px;
-                                    height: 22px;
-                                    display: flex;
-                                    justify-content: center;
-                                    align-items: center;
-                                    border-radius: 50%;
-                                    background-color: var(--color-secondary);
-                                    text-decoration: none;
-                                    color: black;
-                                    padding-top: 1px;
-                                }
-                            }
-
-                            .picture-item.hide {
-                                display: none;
-                            }
-                        }
-                    }
-
-
-                }
-
-                .ask-repair-button {
-                    position: absolute;
-                    bottom: 1.5rem;
-                    right: 1.5rem;
-                    color: black;
-                    border-radius: 50%;
-                    display: flex;
-                    justify-content: center;
-                    align-items: center;
-                    column-gap: 1rem;
-
-                    .rs-left {
-                        border-radius: .35rem;
-                        background-color: var(--color-warning);
-                        display: flex;
-                        justify-content: center;
-                        align-items: center;
-                        padding: 5px 8px;
-
-                        a {
-                            text-decoration: none;
-                            color: var(--color-light);
-                        }
-                    }
-
-                    .rs-right {
-                        border-radius: .35rem;
-                        background-color: var(--color-primary);
-                        display: flex;
-                        justify-content: center;
-                        align-items: center;
-                        padding: 5px 8px;
-
-                        a {
-                            text-decoration: none;
-                            color: var(--color-light);
-                        }
-                    }
-                }
-
-                .btn-close-ask {
-                    position: absolute;
-                    top: .5rem;
-                    right: .5rem;
-                    // color: var(--color-light);
-                    color: black;
-                    font-weight: bold;
-                    font-size: 28px;
-                    width: 25px;
-                    height: 25px;
-                    border-radius: 50%;
-                    display: flex;
-                    justify-content: center;
-                    align-items: center;
-                    text-decoration: none;
-                }
-
-                .btn-close-ask:hover {
-                    background-color: var(--color-secondary);
-                    color: black;
-                    transform: rotate(35deg);
-                }
-            }
-
-        }
-    }
-
-    .ask-repair-wrapper.active {
-        display: block;
-
-        .ask-repair-container {
-            .ask-repair-content {
-                transform: translateY(0%);
-            }
-        }
-    }
-
 }
 
 @media(max-width:1200px) {
