--- a/src/app/components/partners/partner-profile/content/portfolio.component.scss
+++ b/src/app/components/partners/partner-profile/content/portfolio.component.scss
@@ -4,8 +4,22 @@
     padding-top: 0.5rem;
 
     .portfolio-title {
-        font-weight: bold;
-        color: var(--color-warning)
+        display: flex;
+        justify-content: flex-start;
+        column-gap: 2rem;
+        align-items: center;
+        h3{
+            font-weight: bold;
+            color: var(--color-warning)
+        }
+        a{
+            font-size: 25px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            text-decoration: none;
+            color: var(--color-text-body);
+        }
     }
 
     .portfolio-content {
