--- a/src/app/components/clients/home/home.component.html
+++ b/src/app/components/clients/home/home.component.html
@@ -59,111 +59,29 @@
         <div class="photo-popular-wrapper">
             <h2 class="ppopular-title">Nhiếp ảnh gia phổ biến</h2>
             <div class="ppopular-wrapper">
-                <div class="ppopular-item ">
-                    <a routerLink="/profile/1" class="ppopular-link">
+                <div class="ppopular-item " *ngFor="let user of userInfoData; let i = index;">
+                    <a routerLink="/profile/{{user.user.id}}" class="ppopular-link">
                         <div class="ppopular-content">
                             <div class="pp-picture">
                                 <div class="picture-1">
-                                    <img src="./assets/images/user/Rectangle 16-2.png" alt="">
+                                    <img src="{{user.userInfo.img1}}" alt="">
                                 </div>
                                 <div class="picture-right">
                                     <div class="picture-2">
-                                        <img src="./assets/images/user/Rectangle 17-2.png" alt="">
+                                        <img src="{{user.userInfo.img2}}" alt="">
                                     </div>
                                     <div class="picture-3">
-                                        <img src="./assets/images/user/Rectangle 18-2.png" alt="">
+                                        <img src="{{user.userInfo.img3}}" alt="">
                                     </div>
                                 </div>
                             </div>
                             <div class="pp-info">
                                 <div class="info-left">
-                                    <h4 class="info-title">Phạm Việt Cường</h4>
-                                    <span class="info-address">Ba Đình, Hà Nội</span>
+                                    <h4 class="info-title">{{user.user.full_name}}</h4>
+                                    <span class="info-address">{{user.user.address}}</span>
                                 </div>
                                 <div class="info-right">
-                                    <p class="info-price">300,000/h</p>
-                                    <div class="info-rate">
-                                        <div class="rate-star">
-                                            <img src="./assets/images/icons/star-fill.png" alt="">
-                                            <img src="./assets/images/icons/star-fill.png" alt="">
-                                            <img src="./assets/images/icons/star-fill.png" alt="">
-                                            <img src="./assets/images/icons/star-fill.png" alt="">
-                                            <img src="./assets/images/icons/star-fill.png" alt="">
-                                        </div>
-                                        <span class="rate-text">5.0</span>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="pp-avatar">
-                                <img src="./assets/images/avatar/avatar1.jpeg" alt="avatar">
-                            </div>
-                        </div>
-                    </a>
-                </div>
-                <div class="ppopular-item ">
-                    <a routerLink="/profile/2" class="ppopular-link">
-                        <div class="ppopular-content">
-                            <div class="pp-picture">
-                                <div class="picture-1">
-                                    <img src="./assets/images/user/Rectangle 16-1.png" alt="">
-                                </div>
-                                <div class="picture-right">
-                                    <div class="picture-2">
-                                        <img src="./assets/images/user/Rectangle 17-1.png" alt="">
-                                    </div>
-                                    <div class="picture-3">
-                                        <img src="./assets/images/user/Rectangle 18-1.png" alt="">
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="pp-info">
-                                <div class="info-left">
-                                    <h4 class="info-title">Lê Đức Chinh</h4>
-                                    <span class="info-address">Tây Hồ, Hà Nội</span>
-                                </div>
-                                <div class="info-right">
-                                    <p class="info-price">350,000/h</p>
-                                    <div class="info-rate">
-                                        <div class="rate-star">
-                                            <img src="./assets/images/icons/star-fill.png" alt="">
-                                            <img src="./assets/images/icons/star-fill.png" alt="">
-                                            <img src="./assets/images/icons/star-fill.png" alt="">
-                                            <img src="./assets/images/icons/star-fill.png" alt="">
-                                            <img src="./assets/images/icons/star-fill.png" alt="">
-                                        </div>
-                                        <span class="rate-text">5.0</span>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="pp-avatar">
-                                <img src="./assets/images/avatar/avatar1.jpeg" alt="avatar">
-                            </div>
-                        </div>
-                    </a>
-                </div>
-                <div class="ppopular-item">
-                    <a routerLink="/profile/3" class="ppopular-link">
-                        <div class="ppopular-content">
-                            <div class="pp-picture">
-                                <div class="picture-1">
-                                    <img src="./assets/images/user/Rectangle 16.png" alt="">
-                                </div>
-                                <div class="picture-right">
-                                    <div class="picture-2">
-                                        <img src="./assets/images/user/Rectangle 17.png" alt="">
-                                    </div>
-                                    <div class="picture-3">
-                                        <img src="./assets/images/user/Rectangle 18.png" alt="">
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="pp-info">
-                                <div class="info-left">
-                                    <h4 class="info-title">Dương Tùng Vương</h4>
-                                    <span class="info-address">Quận 1, Hồ Chí Minh</span>
-                                </div>
-                                <div class="info-right">
-                                    <p class="info-price">500,000/h</p>
+                                    <p class="info-price">{{user.userInfo.cost}}/h</p>
                                     <div class="info-rate">
                                         <div class="rate-star">
                                             <img src="./assets/images/icons/star-fill.png" alt="">
@@ -329,23 +247,4 @@
             </div>
         </div>
     </div>
-
-    <!-- home.component.html -->
-    <table class="table">
-        <thead>
-            <tr>
-                <th>ID</th>
-                <th>Name</th>
-                <th>Email</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr *ngFor="let user of users">
-                <td>{{ user.id }}</td>
-                <td>{{ user.full_name }}</td>
-                <td>{{ user.email }}</td>
-            </tr>
-        </tbody>
-    </table>
-
 </div>
