--- a/src/app/components/clients/shop/shop.component.html
+++ b/src/app/components/clients/shop/shop.component.html
@@ -8,14 +8,14 @@
                         <div class="ppopular-content">
                             <div class="pp-picture">
                                 <div class="picture-1">
-                                    <img [src]="'./assets/images/user/' + userdto.userInfo.img1" alt="">
+                                    <img [src]="userdto.userInfo.img1" alt="">
                                 </div>
                                 <div class="picture-right">
                                     <div class="picture-2">
-                                        <img [src]="'./assets/images/user/' + userdto.userInfo.img2" alt="">
+                                        <img [src]="userdto.userInfo.img2" alt="">
                                     </div>
                                     <div class="picture-3">
-                                        <img [src]="'./assets/images/user/' + userdto.userInfo.img3" alt="">
+                                        <img [src]="userdto.userInfo.img3" alt="">
                                     </div>
                                 </div>
                             </div>
@@ -39,7 +39,7 @@
                                 </div>
                             </div>
                             <div class="pp-avatar">
-                                <img [src]="'./assets/images/avatar/' + userdto.user.avatar" alt="avatar">
+                                <img [src]="userdto.user.avatar" alt="avatar">
                             </div>
                         </div>
                     </a>
